navbar and footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,17 @@
-<h1 class="text-3xl font-bold text-red-600">Hello Tailwind in Angular 18!</h1>
+<div class="main">
+  <app-navbar></app-navbar>
+  <div class="content">
+    <router-outlet></router-outlet>
+  </div>
+  <app-footer></app-footer>
+
+  <!-- Fixed WhatsApp button-->
+  <a
+    href="https://wa.me/+201002858839?text=السلام%20عليكم،%20أرغب%20بحجز%20موعد%20مع%20معلم%20لتحفيظ%20القرآن%20الكريم."
+    target="_blank"
+    class="whatsapp-float"
+    aria-label="WhatsApp Chat"
+  >
+    <i class="fab fa-whatsapp"></i>
+  </a>
+</div>
