--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -14,7 +14,7 @@ footer::before {
   left: 0;
   right: 0;
   bottom: 0;
-  // background-image: url(../../../assets/images/shared/Layer_1.png);
+  // background-image: url(../../../assets/images/shared/Layer_1\\(1\).svg);
   // background-image: url(../../../assets/images/4.jpg); //    background-color: rgb(0 0 0 / 88%);
   background-image: url(../../../assets/images/7.jpg);
   background-size: cover;
