--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -73,13 +73,9 @@
       <button class="mobile-menu-btn md:hidden" (click)="toggleMenu()">
         ☰ Menu
       </button>
-      <a
-        class="nav-cta"
-        href="https://wa.me/201002858839?text=السلام%20عليكم%20%0Aأريد%20حجز%20الحصة%20التجريبية%20الأولى%20المجانية%20لتحفيظ%20القرآن%20الكريم.%0Aشكرًا%20جزيلًا."
-        target="_blank"
-      >
+      <button class="nav-cta" (click)="goToWhatsapp()">
         <span class="cta-text-en"> Free Trial</span>
-      </a>
+      </button>
     </div>
   </div>
 </nav>
