--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,7 +1,7 @@
 /* Footer */
 footer {
   background: #f4f4f4;
-  padding: 4rem 5% 2rem;
+  padding: 3em 5% 1rem;
   color: #fff;
   position: relative;
   overflow: hidden;
@@ -16,7 +16,8 @@ footer::before {
   bottom: 0;
   // background-image: url(../../../assets/images/shared/Layer_1\\(1\).svg);
   // background-image: url(../../../assets/images/4.jpg); //    background-color: rgb(0 0 0 / 88%);
-  background-image: url(../../../assets/images/7.jpg);
+  // background-image: url(../../../assets/images/7.jpg);
+  background-image: url("../../../assets/images/footer.png");
   background-size: cover;
   background-position: top;
   z-index: 0;
@@ -29,7 +30,8 @@ footer::after {
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgb(0 0 0 / 74%);
+  // background-color: rgb(0 0 0 / 74%);
+  background-color: #211f1ae6;
   z-index: 1;
 }
 
@@ -44,7 +46,7 @@ footer::after {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 3rem;
-  margin-bottom: 3rem;
+  margin-bottom: 1rem;
 }
 
 .footer-section h3 {
@@ -172,7 +174,7 @@ body.dark-mode .social-icon {
 
 .footer-bottom {
   border-top: 2px solid #e0e0e0;
-  padding-top: 2rem;
+  padding-top: 1rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
