--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -3,8 +3,9 @@ nav {
   background: #fff;
   padding: 10px 5%;
   box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1);
-  position: sticky;
+  position: fixed;
   top: 0;
+  width: 100%;
   z-index: 1000;
   animation: slideDown 0.6s ease-out;
   transition: background-color 0.3s ease;
@@ -69,7 +70,7 @@ body.dark-mode .logo {
 }
 
 .nav-center a {
-  color: #865e03;
+  // color: #865e03;
   text-decoration: none;
   font-weight: 600;
   font-size: 1.05rem;
@@ -137,23 +138,24 @@ body.dark-mode .toggle-btn {
 }
 
 .nav-cta {
-  background: #5e9331;
+  background: linear-gradient(135deg, #25d366, #4d7a28);
   color: #fff;
   padding: 0.8rem 2rem;
   border-radius: 50px;
   text-decoration: none;
   font-weight: 600;
   transition: all 0.3s ease;
-  box-shadow: 0 4px 15px rgba(94, 147, 49, 0.3);
-  border: none;
+  box-shadow: 0 6px 20px rgba(94, 147, 49, 0.4);
+  // border: 1px solid #5e9331;
   cursor: pointer;
   font-size: 1rem;
 }
 
 .nav-cta:hover {
-  background: #4d7a28;
-  transform: translateY(-2px);
+  background: linear-gradient(135deg, #28af5a, #477025);
+  color: #fff;
   box-shadow: 0 6px 20px rgba(94, 147, 49, 0.4);
+  transform: translateY(-4px);
 }
 
 .mobile-menu-btn {
