--- a/src/app/pages/home/components/about-child/about-child.component.html
+++ b/src/app/pages/home/components/about-child/about-child.component.html
@@ -3,12 +3,12 @@
   <div class="section-container">
     <div class="section-header">
       <h2 class="section-title">
-        <span class="about-section-title-en">About Aqraa Institute</span>
+        <span class="about-section-title-en">About Iqraa Institute</span>
         <span class="about-section-title-ar hidden">عن معهد اقرأ</span>
       </h2>
       <p class="section-subtitle">
-        <span class="about-section-subtitle-en text-black">
-          Nurturing Hearts and Minds Through Quranic Knowledge for Everyone,
+        <span class="about-section-subtitle-en" style="color: #5d6d7e">
+          Nurturing Hearts and Minds Through Quranic Knowledge for Everyone,<br />
           Arabs and Non-Arabs Alike
         </span>
       </p>
