--- a/src/app/pages/home/components/hero/hero.component.html
+++ b/src/app/pages/home/components/hero/hero.component.html
@@ -2,12 +2,12 @@
 <section class="hero">
   <div class="hero-container">
     <div class="hero-content">
-      <h1 class="hero-headline" id="hero-headline">Aqraa Institute</h1>
+      <h1 class="hero-headline" id="hero-headline">Iqraa Institute</h1>
       <h2 class="hero-subheadline" id="hero-subheadline">
         Empowering Muslims Worldwide to Learn, Read, and Memorize the Quran.
       </h2>
       <p class="hero-description" id="hero-description">
-        At Aqraa Institute, we help Muslims Arabs and non-Arabs alike learn the
+        At Iqraa Institute, we help Muslims Arabs and non-Arabs alike learn the
         Quran with Tajweed and understand Islamic principles through interactive
         online classes Led by certified Quran teachers with vast experience in
         teaching non-Arabic speakers and young learners.
