--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,8 @@
 <div class="main">
-  <app-hero></app-hero>
-  <app-about-child></app-about-child>
+  <app-hero />
+  <app-about-child />
+  <app-choose-us />
+  <app-packages />
+  <app-testimonials ngSkipHydration />
+  <app-contact />
 </div>
