--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -6,7 +6,7 @@
         <h3>
           <img src="./assets/images/shared/logos.png" width="80" alt="logos" />
           <div>
-            <span class="footer-title-en">Aqraa Institute</span>
+            <span class="footer-title-en">Iqraa Institute</span>
             <span class="footer-title-ar hidden">معهد اقرأ</span>
           </div>
         </h3>
@@ -258,7 +258,7 @@
     <div class="footer-bottom">
       <p>
         <span class="copyright-en"
-          >© 2024 Aqraa Institute. All rights reserved.</span
+          >© 2024 Iqraa Institute. All rights reserved.</span
         >
       </p>
       <ul class="footer-legal">
