--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -5,7 +5,7 @@
       <a routerLink="home" class="logo-icon">
         <img src="./assets/images/shared/logos.png" width="80" alt="logos" />
       </a>
-      <!-- <span class="logo-text-en">Aqraa Institute</span>
+      <!-- <span class="logo-text-en">Iqraa Institute</span>
       <span class="logo-text-ar hidden">معهد اقرأ</span> -->
     </div>
     <div class="nav-right">
