--- a/src/app/pages/home/components/hero/hero.component.scss
+++ b/src/app/pages/home/components/hero/hero.component.scss
@@ -8,7 +8,7 @@
   position: relative;
   background: linear-gradient(135deg, $bg1 0%, $bg2 100%);
   overflow: hidden;
-  padding: 11rem 5%;
+  padding: 13rem 5%;
 }
 
 .hero::before {
@@ -29,7 +29,6 @@
   position: absolute;
   top: -50%;
   right: -20%;
-  // background-color: rgb(0 0 0 / 74%);
   background-color: rgb(0 0 0 / 10%);
   top: 0;
   left: 0;
@@ -147,6 +146,7 @@
 .btn-primary {
   background: $btn;
   color: $bg1;
+  font-size: 18px;
   box-shadow: 0 8px 25px rgba(94, 147, 49, 0.3);
 }
 
@@ -160,6 +160,8 @@
   background: transparent;
   color: $color-text3;
   border: 2px solid $color-text3;
+  font-size: 18px;
+  font-weight: bold;
 }
 
 .btn-secondary:hover {
@@ -258,6 +260,7 @@
 
   .hero-description {
     font-size: 1.1rem;
+    line-height: 1.5;
   }
 
   .hero-buttons {
@@ -275,6 +278,13 @@
 
   .floating-decoration {
     display: none;
+  }
+
+  .btn-secondary {
+    background: #b88000;
+    color: #fff;
+    transform: translateY(-4px);
+    box-shadow: 0 8px 25px rgba(150, 103, 20, 0.3);
   }
 }
 
