--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -11,16 +11,19 @@
           </div>
         </h3>
         <p>
-          <span id="footer-description-en"
-            >Dedicated to providing excellence in Quranic education through
-            experienced teachers, proven methodologies, and a supportive
-            learning environment.</span
-          >
-          <span id="footer-description-ar" class="hidden"
-            >مكرسون لتقديم التميز في التعليم القرآني من خلال معلمين ذوي خبرة
-            ومنهجيات مثبتة وبيئة تعليمية داعمة.</span
-          >
+          <span id="footer-description-en">
+            Dedicated to delivering excellence in Quranic education for Arabs
+            and non-Arabs, through qualified teachers, authentic methodologies,
+            and a nurturing environment that inspires the memorization of the
+            Qur’an, mastery of Tajweed, and the study of Islamic sciences.
+          </span>
+          <span id="footer-description-ar" class="hidden">
+            نسعى لتقديم التميز في تعليم القرآن الكريم للعرب وغير العرب، من خلال
+            معلمين مؤهلين، ومناهج أصيلة، وبيئة تعليمية محفزة تُلهم حفظ القرآن
+            الكريم، وإتقان تجويده، ودراسة المواد الإسلامية.
+          </span>
         </p>
+
         <div class="social-links">
           <a
             href="https://www.facebook.com/share/1BGhPKnjbH/?mibextid=wwXIfr"
