--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,6 +10,7 @@
 html, body {
     height: 100%;
     width: 100%;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -31,7 +32,6 @@ body.rtl {
     font-family: 'Arial', 'Tahoma', sans-serif;
 }
 
-
 .main{
       display: flex;
     flex-direction: column;
@@ -39,10 +39,10 @@ body.rtl {
     height: 100vh;
 }
 
-.content{
+.content {
   flex-grow: 2;
+  padding-top: 80px;
 }
-
 
 .whatsapp-float {
   position: fixed;
@@ -122,5 +122,15 @@ body.rtl {
     transform: scale(1);
     box-shadow: 0 0 0 0 rgba(37, 211, 102, 0);
   }
+}
+
+.navber {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
+  background-color: #fff; /* مهم حتى لا يظهر المحتوى تحته */
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
