--- a/src/app/pages/home/components/choose-us/choose-us.component.html
+++ b/src/app/pages/home/components/choose-us/choose-us.component.html
@@ -1,6 +1,10 @@
 <section class="why-choose-us">
   <div class="section-container">
     <h2 class="section-title">Why us Iqraa Institute?</h2>
+    <p class="section-subtitle">
+      Because we combine excellence, flexibility, and faith-based education to
+      help every student achieve their Qur’anic goals.
+    </p>
     <div class="why-container">
       <!-- Images -->
       <div class="image-section">
@@ -8,6 +12,7 @@
           src="./assets/images/choose-us.png"
           alt="why-choose-us "
           width="600px"
+          height="90%"
         />
       </div>
       <!-- accordion -->
@@ -29,10 +34,11 @@
       </div>
     </div>
   </div>
-  <button class="btn btn-primary btn-animated">
+  <button class="btn btn-primary btn-animated" (click)="goToWhatsapp()">
     <span>Book Your Tutor</span>
   </button>
 </section>
+
 <!-- statistics -->
 <section class="statistics" #statsSection>
   <div class="stats-container">
