--- a/src/app/pages/home/components/choose-us/choose-us.component.scss
+++ b/src/app/pages/home/components/choose-us/choose-us.component.scss
@@ -198,7 +198,9 @@
     }
   }
 }
-
+.image-section img {
+  height: 90%;
+}
 /* Responsive Design */
 @media (max-width: 1024px) {
   .why-container {
