--- a/src/app/pages/home/components/testimonials/testimonials.component.html
+++ b/src/app/pages/home/components/testimonials/testimonials.component.html
@@ -1,4 +1,4 @@
-<section class="testimonials-section" ngSkipHydration>
+<section class="testimonials-section" id="testimonials" ngSkipHydration>
   <div class="containers" style="width: 100%">
     <h2 class="section-title">Our Testimonials</h2>
 
