--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -3,9 +3,9 @@ nav {
   background: #fff;
   padding: 10px 5%;
   box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1);
-  position: fixed;
-  top: 0;
-  width: 100%;
+  // position: sticky;
+  // top: 0;
+  // width: 100%;
   z-index: 1000;
   animation: slideDown 0.6s ease-out;
   transition: background-color 0.3s ease;
