init page price

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,6 +2,7 @@
   <app-hero />
   <app-about-child />
   <app-choose-us />
+  <app-child-courses />
   <app-packages />
   <app-testimonials ngSkipHydration />
   <app-contact />
