--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -261,7 +261,7 @@
     <div class="footer-bottom">
       <p>
         <span class="copyright-en"
-          >© 2024 Iqraa Institute. All rights reserved.</span
+          >© 2025 Iqraa Institute. All rights reserved.</span
         >
       </p>
       <ul class="footer-legal">
@@ -271,7 +271,9 @@
           </a>
         </li>
         <li>
-          <a href="#privacy"><span class="legal2-en">Privacy Policy</span></a>
+          <a routerLink="privacy"
+            ><span class="legal2-en">Privacy Policy</span></a
+          >
         </li>
         <!-- <li>
           <a href="#usage"
