--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -76,6 +76,7 @@ body.dark-mode .logo {
   transition: all 0.3s ease;
   position: relative;
   padding: 0.5rem 0;
+  color: black;
 }
 
 body.dark-mode .nav-center a {
